--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -190,7 +190,14 @@
     </style>
 
     <section class="hero-banner desktop-hero" id="home">
-        <img src="{% static 'images/imageTopBar.jpg' %}" alt="Hero banner" class="hero-banner-image">
+        <div class="hero-slideshow">
+            <img src="{% static 'images/Hero-BannerImages/projects.jpg' %}" alt="Hero banner" class="hero-slide">
+            <img src="{% static 'images/Hero-BannerImages/imageTopBar4.jpg' %}" alt="Hero banner" class="hero-slide">
+            <img src="{% static 'images/Hero-BannerImages/imageTopBar3.jpg' %}" alt="Hero banner" class="hero-slide">
+            <img src="{% static 'images/Hero-BannerImages/imageTopBar2.jpg' %}" alt="Hero banner" class="hero-slide">
+            <img src="{% static 'images/Hero-BannerImages/imageTopBar1.jpg' %}" alt="Hero banner" class="hero-slide">
+            <img src="{% static 'images/Hero-BannerImages/imageTopBar.jpg' %}" alt="Hero banner" class="hero-slide">
+        </div>
         <div class="hero-banner-overlay"></div>
         
         <!-- Desktop Hero Content -->
@@ -226,7 +233,14 @@
     </section>
 
     <section class="hero-banner mobile-hero" id="home" style="margin-top: -90px; height: 800px;">
-        <img src="{% static 'images/imageTopBar.jpg' %}" alt="Hero banner" class="hero-banner-image">
+        <div class="hero-slideshow">
+            <img src="{% static 'images/Hero-BannerImages/projects.jpg' %}" alt="Hero banner" class="hero-slide">
+            <img src="{% static 'images/Hero-BannerImages/imageTopBar4.jpg' %}" alt="Hero banner" class="hero-slide">
+            <img src="{% static 'images/Hero-BannerImages/imageTopBar3.jpg' %}" alt="Hero banner" class="hero-slide">
+            <img src="{% static 'images/Hero-BannerImages/imageTopBar2.jpg' %}" alt="Hero banner" class="hero-slide">
+            <img src="{% static 'images/Hero-BannerImages/imageTopBar1.jpg' %}" alt="Hero banner" class="hero-slide">
+            <img src="{% static 'images/Hero-BannerImages/imageTopBar.jpg' %}" alt="Hero banner" class="hero-slide">
+        </div>
         <div class="hero-banner-overlay"></div>
         
         <!-- Mobile Hero Content -->
