--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -234,9 +234,9 @@
 
     <section class="hero-banner mobile-hero" id="home" style="margin-top: -90px; height: 800px;">
         <div class="hero-slideshow">
-            <img src="{% static 'images/Hero-BannerImages/imageTopBar2.jpg' %}" alt="Hero banner" class="hero-slide">
-            <img src="{% static 'images/Hero-BannerImages/imageTopBar1.jpg' %}" alt="Hero banner" class="hero-slide">
-            <img src="{% static 'images/Hero-BannerImages/imageTopBar.jpg' %}" alt="Hero banner" class="hero-slide">
+            <div class="hero-slide mobile-slide"></div>
+            <div class="hero-slide mobile-slide"></div>
+            <div class="hero-slide mobile-slide"></div>
         </div>
         <div class="hero-banner-overlay"></div>
         
